more fixing spacing

--- a/carolina_herrera/choose_store.css
+++ b/carolina_herrera/choose_store.css
@@ -88,7 +88,7 @@
     margin-top: 0 !important;
   }
   .bw-iframe-container .appointment-rsvp-container #enter-contact-info {
-    margin-top: 1rem !important;
+    margin-top: 0rem !important;
   }
   .bw-iframe-container .store_miles_away, .bw-iframe-container .store_open_hours {
     font-size: 13px;
